# shaman

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  shaman_lib.tar.gz.REMOVED.git-id
.github/workflows/: cmake-single-platform.yml
doc/: how_to_debug.md
examples/: CMakeLists.txt  TODO.md  eigen.h  readme.md  sum.h  various.h
examples/cadna/: gauss.cpp  jacobi.cpp  muller.cpp  newton.cpp  rump_polynomial.cpp  second_order.cpp  utils.h
examples/kokkos/: CMakeLists.txt  simple_example.cpp
examples/performances/: CMakeLists.txt  lulesh.cpp  nbody.cpp  spectralnorm.cpp
examples/schrodinger/: CMakeLists.txt  main.cpp  schrodinger.cpp
examples/summerSchool/: cvPlot  unitTest.cpp  unitTest_debug.exe_shaman_profile.txt
shaman/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  main.cpp  profiler.sh  readme.md  shaman.cbp  shaman_demo_shaman_profile.txt
shaman/examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cadna.h  cadna_test.h  cmake_install.cmake  eigen.h  legendre.h  mpi_test.h  schrodinger.h  sqrtHeron.h  sum.h  tests.h  various.h
shaman/examples/cadna/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cadna_failures.cpp  cmake_install.cmake  hilbert_determinant.cpp
shaman/examples/exact/: exact.cpp
shaman/examples/paper/: demo.h
shaman/examples/performances/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lulesh.cpp  lulesh_vector.cpp  mandelbrot.cpp  nbody.cpp  spectralnorm.cpp
shaman/examples/schrodinger/: CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  schrodinger.cpp  schrodinger.h
shaman/examples/summerSchool/: Makefile  cvPlot  cvPlot.gp  integrate.hxx  unitTest_debug.exe_shaman_profile.txt
shaman/examples/summerSchool/corrige/etape1.0/: Makefile  cvPlot  cvPlot.gp  unitTest.cxx
shaman/examples/summerSchool/corrige/etape1.1/: cvPlot.gp
shaman/examples/summerSchool/corrige/etape1.1/util/: verrou-exclude
shaman/examples/summerSchool/corrige/etape2.0/: Makefile
shaman/examples/summerSchool/corrige/etape2.1/: Makefile  cvPlot.gp  integrate.hxx
shaman/examples/summerSchool/corrige/etape2.2/: Makefile
shaman/examples/summerSchool/corrige/etape2.3/: Makefile  ddRun2  runGcov
shaman/examples/summerSchool/corrige/etape2.3/util/: dd-synthese
shaman/examples/summerSchool/corrige/etape2.4/: Makefile  cvPlot  ddRun  integrate.hxx
shaman/examples/summerSchool/work/: Makefile  cvPlot  cvPlot.gp  integrate.hxx  unitTest  unitTest.cxx  unitTest_debug.exe_shaman_profile.txt
shaman/prototypes/: readme.md
shaman/prototypes/classic_shaman/: shamanClassic.fsx
shaman/prototypes/common_functions/: Eft.fsx
shaman/prototypes/increased_precision/: readme.md  shamanPrecise.fsx
shaman/prototypes/loop_correction/: shamanLoop.fsx
shaman/prototypes/loop_shaman/: readme.md  shamanLoop.fsx
shaman/prototypes/loop_shaman/demos/: schrodinger.fsx  various.fsx
shaman/prototypes/tagged_error/: shamanTagged.fsx
shaman/prototypes/tagged_error/demos/: schrodinger.fsx  various.fsx
shaman/prototypes/various/: Precision.fsx
shaman/shaman/: CMakeLists.txt  Shaman.h  how_to_debug.md  how_to_instrument.md  readme.md
shaman/shaman/helpers/: Shaman_MPI.h
shaman/shaman/lib/: Shaman_MPI.h  Shaman_eigen.h  Shaman_malloc.h
shaman/shaman/shaman/: NumericalDebugger.1.ll  NumericalDebugger.cpp  NumericalDebugger.h  Shaman.h  Shaman_Decl.h  Shaman_eigen.h  Shaman_mpi.h  readme.md  todo.txt
shaman/shaman/shaman/deprecated/: Variable.h  Variable_Decl.h
shaman/shaman/shaman/tagged/: ErrorSum.h
shaman/shaman/shaman_profiler/: shaman_prof.sh  shaman_profiler.py  todo.txt
shaman/shaman/shamanizer/: readme.md  shamanizer.py
shaman/shaman/src/: Debugger.h  Eft.h  ErrorSum.h  Functions.h  GlobalVar.cpp  GlobalVar.h  GlobalVariables.cpp  GlobalVariables.h  Loop.h  Methods.h  NumericalDebugger.cpp  Operators.h  Shaman_Decl.h  Significativity.h  Tagger.h  memoryStore.h
shaman/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  how_to_instrument.md  readme.md  shaman.h
shaman/src/shaman/: Functions.h  Methods.h  eft.h  functions.h  methods.h  operators.h
shaman/src/shaman/helpers/: Shaman_eigen.h  Shaman_malloc.h  Shaman_mpi.h  eigen.h  mpi.h
shaman/src/shaman/helpers/trilinos/: arithmeticTraits_kokkos.h
shaman/src/shaman/tagged/: GlobalVar.cpp  Tagger.h  error_sum.h  global_vars.cpp  global_vars.h  memory_store.h  tagger.h
shaman/src/shaman/unit_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_eft.cc
shaman/tests/: TODO.txt  cadna.h  cadna_test.h  eigen.h  legendre.h  mpi_test.h  schrodinger.cpp  schrodinger.h  sum.h  test_carray.h  test_eft.h  test_loop.h  tests.h
shaman/tests/exact/: exact.cpp  exact.h
shaman/tests/fraction/: fraction.h
shaman/tools/: readme.md
shaman/tools/shaman_profiler/: readme.md
shaman/tools/shamanizer/: shamanizer.py
src/: CMakeLists.txt  how_to_instrument.md  readme.md  shaman.h
src/shaman/: functions.h  methods.h  operators.h  traits.h
src/shaman/helpers/: Shaman_trilinos.h  shaman_complex.h  shaman_mpi.h  shaman_openmp.h  shaman_trilinos.h
src/shaman/helpers/trilinos/: lapackTraits_belosTeuchos.h  reductionTraits_kokkos.h  scalarTraits_teuchos.h  serializationTraits_teuchos.h
src/shaman/tagged/: error_sum.h  global_vars.cpp  global_vars.h
src/shaman/unit_tests/: TODO.md  mpi_test.h  shaman_unittests[1]_include.cmake  test_carray.h  test_eft.cc  test_loop.h
tools/: readme.md
tools/shaman_profiler/: readme.md  shaman_profiler.py
tools/shamanizer/: readme.md
